# synema

./: README.md  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.py
data/cinema.cdb/: 1854356897522279234.h5  224480432261954486.h5  314806297942963000.h5  3528787656429804739.h5  3758092251771019747.h5  4894450099389812347.h5  4937288336446210959.h5  5596771367047279313.h5  5722960695787600554.h5  6509374104945536506.h5  700683015967783553.h5  7328625528890741952.h5  8202569089038573369.h5  8515479313484224880.h5  data.csv
encoders/: frequency.py  hashgrid.py  sh4.py
examples/: cinema_checkpoint_restore.py  cinema_rgb_image.py  cinema_scalar_image.py  depth_guided.py  nerf.py  tiny_nerf.py
models/: cinema.py  nerfs.py  siren.py  tsdf.py
renderers/: ray_gen.py  rays.py  volume.py
samplers/: pixel.py  ray.py
synema/encoders/: frequency.py  hashgrid.py  sh4.py
synema/models/: cinema.py  nerfs.py  siren.py  tsdf.py  wire.py
synema/renderers/: ray_gen.py  volume.py
synema/samplers/: ray.py
