[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synema"
version = "0.1"
description = "View Synthesis for Cinema"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD" }
authors = [
  { name = "Li-Ta Lo", email = "ollie@lanl.gov" },
]
urls = { Homepage = "https://github.com/cinemascience/synema" }

# Forward-compatible dependency ranges based on import audit
dependencies = [
  "jax>=0.5.2,<1.0",
  "flax>=0.12.0,<1.0",
  "optax>=0.2.7,<1.0",
  "jaxtyping>=0.3.0,<1.0",
  "numpy>=1.26.4,<3.0",
  "matplotlib>=3.10.7,<4.0",
  "h5py>=3.15.0,<4.0",
  "tqdm>=4.66.4,<5.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.0,<3.0",
  "twine>=5,<6",
  "ruff>=0.6,<1.0",
  "pytest>=8,<9",
]

cuda12 = [
  "jax[cuda12]>=0.5.2,<1.0",
]

[tool.setuptools.packages.find]
include = ["synema*"]
